<resources>
    <string name="app_name">BirthDaylicious</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="chargement_txt">Chargement</string>
    <string name="description_logo">Logo de l\'application eCommerce</string>
    <string name="connexion_name">CONNEXION</string>
    <string name="forgot_name">Mot de passe oublié?</string>
    <string name="login_name">Login :</string>
    <string name="password_name">Password :</string>
    <string name="project_name">Ecommerce</string>
    <string name="item_default_name">Nom de l\'article</string>
    <string name="item_default_price">0€</string>
    <string name="item_default_description">Description</string>
    <string name="item_default_panier_name">Nom</string>
    <string name="item_default_panier_price">Prix</string>
    <string name="panier_name">Mon Panier</string>
    <string name="prompt_code">Code carte bancaire</string>
    <string name="emptycart_name">Vider le panier</string>
    <string name="confirmcart_name">Valider le panier</string>
    <string name="project_final">Merci pour vos achats!</string>
    <string name="txt_bonapp">Bon appétit!</string>
</resources>