<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/creme">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/item_multicolore_icon" />

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_default_name"
            android:textColor="@color/purple_500"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:text="@string/item_default_description" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description"
            android:text="@string/item_default_price" />

        <Button
            android:id="@+id/btn_panier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price"
            android:text="Ajouter au panier"
            android:backgroundTint="#FDF688E8"/>

    </RelativeLayout>




</LinearLayout>