<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/txt_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BirthDaylicious"
        android:textColor="@color/rose"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cupcakehappy"
        app:layout_constraintBottom_toTopOf="@+id/edit_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Email ou téléphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Mot de passe"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_login" />

    <ImageView
        android:id="@+id/text_login"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_account"
        android:text="@string/login_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edit_login"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/text_password"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_password"
        android:layout_marginRight="20dp"
        android:text="@string/password_name"
        app:layout_constraintRight_toLeftOf="@id/edit_password"
        app:layout_constraintTop_toBottomOf="@id/text_login" />

    <TextView
        android:id="@+id/text_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <Button
        android:id="@+id/btn_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/connexion_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgetpassword" />

    <TextView
        android:id="@+id/txt_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pas de compte? Cliquez ici"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_connexion" />


</androidx.constraintlayout.widget.ConstraintLayout>